crates/wows-replays/tests/snapshots/20260213_203056_PFSD210-Marceau_22_tierra_del_fuego/packet_snapshots__packet_019.snap
---
source: crates/wows-replays/tests/packet_snapshots.rs
expression: value
---
clock: 0
packet_type: 8
payload:
  EntityMethod:
    args:
      - - 128
        - 2
        - 125
        - 113
        - 1
        - 40
        - 85
        - 15
        - 101
        - 118
        - 97
        - 108
        - 117
        - 97
        - 116
        - 105
        - 111
        - 110
        - 115
        - 76
        - 101
        - 102
        - 116
        - 113
        - 2
        - 125
        - 113
        - 3
        - 40
        - 75
        - 0
        - 75
        - 12
        - 75
        - 1
        - 75
        - 12
        - 117
        - 85
        - 20
        - 115
        - 116
        - 114
        - 97
        - 116
        - 101
        - 103
        - 105
        - 99
        - 65
        - 99
        - 116
        - 105
        - 111
        - 110
        - 115
        - 84
        - 97
        - 115
        - 107
        - 113
        - 4
        - 41
        - 117
        - 46
    entity_id: 1214224
    method: receiveAvatarInfo
