crates/wows-replays/tests/snapshots/20260213_203056_PFSD210-Marceau_22_tierra_del_fuego/packet_snapshots__packet_027.snap
---
source: crates/wows-replays/tests/packet_snapshots.rs
expression: value
---
clock: 0
packet_type: 1
payload:
  CellPlayerCreate:
    component_data:
      - 2
    entity_id: 1214224
    entity_type: Avatar
    position:
      x: -600
      y: 0
      z: 400
    props:
      allyTargetsCapture: 0
      hasFullPing: 0
      intuitionActive: 0
      isAlive: 1
      isFlyMode: 1
      isInMinefield: 0
      ownShipId: 1214225
      playerModeState:
        observedTeamId: 0
        playerModeType: 0
      privateBattleLogicState:
        battleItems: []
        diplomacyTickets: ~
        leveling: ~
        missions:
          pullTargets: []
          reachDestination: []
        respawns: ~
        triggers: ~
      privateVehicleState:
        battleCards: ~
        buffs:
          buffItems: []
        missiles: ~
        rageMode: ~
        ribbons: []
      selectedTorpedoGroup: 0
      selectedWeapon: 0
      spottedEntities: []
      squadronWeatherParams:
        AAMaxDist: 1
        GMIdealRadius: 1
        GSIdealRadius: 1
        GSMIdealRadius: 1
        airDefenseVisibilityTime: 2
        bad: 0
        burnDamage: 1
        burnTime: 1
        maxPlaneVisionDistance: 2000
        maxShipVisionDistance: 2000
        maxVisibilityDistance: 2000
        maxVisibilityDistanceByPlane: 2000
        mgVisibilityTime: 20
        planeMaxVisibilityDistance: 2000
        planeMaxVisibilityDistanceByPlane: 2000
        planeSpeed: 1
        planeVisibilityFactor: 1
        planeVisibilityFactorByPlane: 1
        shootShift: 1
        speedCoef: 1
        transparency: 1
        visibilityFactor: 1
        visibilityFactorByPlane: 1
      teamId: 0
      useATBAandAirDefense: 1
      vehiclePosition:
        - 0
        - 0
        - 0
      visibilityDistances:
        byPlane: 130.67999267578125
        byShip: 232.47000122070313
        bySmoke: 66.66666412353516
      weatherParams:
        AAMaxDist: 1
        GMIdealRadius: 1
        GSIdealRadius: 1
        GSMIdealRadius: 1
        airDefenseVisibilityTime: 2
        bad: 0
        burnDamage: 1
        burnTime: 1
        maxPlaneVisionDistance: 2000
        maxShipVisionDistance: 2000
        maxVisibilityDistance: 2000
        maxVisibilityDistanceByPlane: 2000
        mgVisibilityTime: 20
        planeMaxVisibilityDistance: 2000
        planeMaxVisibilityDistanceByPlane: 2000
        planeSpeed: 1
        planeVisibilityFactor: 1
        planeVisibilityFactorByPlane: 1
        shootShift: 1
        speedCoef: 1
        transparency: 1
        visibilityFactor: 1
        visibilityFactorByPlane: 1
      willBeDeadAtTime: 0
    rotation:
      pitch: 0
      roll: 0
      yaw: 3.1415927410125732
    space_id: 7162
    vehicle_id: 0
